--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-tailwind": "0.6.0",
     "ember-cli-terser": "^4.0.2",
+    "ember-composable-helpers": "3.2.0",
     "ember-concurrency": "^2.3.7",
     "ember-data": "3.19.0",
     "ember-disable-prototype-extensions": "^1.1.3",
@@ -65,7 +66,7 @@
     "ember-mapbox-gl": "NYCPlanning/ember-mapbox-gl",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.2.2",
-    "ember-promise-helpers": "^2.0.0",
+    "ember-promise-helpers": "1.0.9",
     "ember-qunit": "^5.1.4",
     "ember-resolver": "^8.0.2",
     "ember-source": "~3.28.0",
