--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "mapbox-gl": ">=0.47.0"
   },
   "engines": {
-    "node": "12.* || 14.* || 16.*"
+    "node": "12.* || 14.* || 16.* || 18.*"
   },
   "ember": {
     "edition": "octane"
