--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-tailwind": "0.6.0",
     "ember-cli-terser": "^4.0.2",
+    "ember-cli-update": "^1.0.1",
     "ember-concurrency": "^2.3.7",
     "ember-data": "3.19.0",
     "ember-disable-prototype-extensions": "^1.1.3",
