--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   "repository": "https://github.com/NYCPlanning/ose-ember-addons",
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
-    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
+    "lint": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
+    "lint:fix": "npm-run-all --print-name --aggregate-output --continue-on-error --parallel \"lint:*:fix\"",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint test:*",
+    "test": "npm-run-all --print-name \"lint\" \"test:*\"",
     "test:ember": "ember test"
   },
   "dependencies": {
     "@turf/union": "^6.0.0",
-    "ember-auto-import": "^1.11.3",
+    "ember-auto-import": "^2.4.3",
     "ember-cli-babel": "^7.26.11",
-    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-htmlbars": "^6.1.1",
     "ember-composable-helpers": "3.2.0",
     "ember-copy": "^2.0.1",
     "ember-fetch": "^8.1.2",
@@ -37,19 +37,19 @@
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
     "@ember/render-modifiers": "^2.0.5",
-    "@ember/test-helpers": "^2.4.2",
-    "@embroider/test-setup": "^0.43.5",
+    "@ember/test-helpers": "^2.8.1",
+    "@embroider/test-setup": "^1.8.3",
     "@fortawesome/ember-fontawesome": "^0.4.1",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@glimmer/component": "^1.0.4",
-    "@glimmer/tracking": "^1.0.4",
+    "@glimmer/component": "^1.1.2",
+    "@glimmer/tracking": "^1.1.2",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.5.3",
-    "ember-cli": "~3.28.0",
-    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli": "~4.8.0",
+    "ember-cli-dependency-checker": "^3.3.1",
     "ember-cli-deploy": "1.0.2",
     "ember-cli-deploy-build": "1.1.1",
     "ember-cli-deploy-git": "1.3.3",
@@ -63,38 +63,37 @@
     "ember-concurrency": "^2.3.7",
     "ember-data": "3.19.0",
     "ember-disable-prototype-extensions": "^1.1.3",
-    "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
     "ember-mapbox-gl": "NYCPlanning/ember-mapbox-gl",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-page-title": "^6.2.2",
-    "ember-qunit": "^5.1.4",
-    "ember-resolver": "^8.0.2",
-    "ember-source": "~3.28.0",
+    "ember-page-title": "^7.0.0",
+    "ember-qunit": "^6.0.0",
+    "ember-resolver": "^8.0.3",
+    "ember-source": "~4.8.0",
     "ember-source-channel-url": "^3.0.0",
-    "ember-template-lint": "^3.6.0",
+    "ember-template-lint": "^4.16.1",
     "ember-tooltips": "^3.6.0",
-    "ember-try": "^1.4.0",
+    "ember-try": "^2.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "^10.5.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-ember": "^11.1.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-qunit": "^6.2.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-qunit": "^7.3.1",
     "foundation-sites": "^6.7.5",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
-    "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0",
-    "sass": "^1.58.0"
+    "prettier": "^2.7.1",
+    "qunit": "^2.19.2",
+    "qunit-dom": "^2.0.0",
+    "sass": "^1.58.0",
+    "webpack": "^5.74.0"
   },
   "peerDependencies": {
     "ember-mapbox-gl": ">=0.12.0",
     "mapbox-gl": ">=0.47.0"
   },
   "engines": {
-    "node": "12.* || 14.* || 16.* || 18.*"
+    "node": "14.* || 16.* || >= 18"
   },
   "ember": {
     "edition": "octane"
