--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "ember-composable-helpers": "3.2.0",
     "ember-copy": "^2.0.1",
     "ember-fetch": "^8.1.2",
-    "ember-power-select": "^5.0.2",
+    "ember-mapbox-gl": "^2.0.0",
+    "ember-power-select": "^6.0.2",
     "ember-promise-helpers": "1.0.9",
     "ember-truth-helpers": "^3.1.1",
-    "mapbox-gl": ">=0.47.0",
+    "mapbox-gl": "^1.0.0",
     "nyc-planning-style-guide": "^1.0.7"
   },
   "devDependencies": {
@@ -63,7 +64,6 @@
     "ember-data": "3.19.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^2.1.2",
-    "ember-mapbox-gl": "NYCPlanning/ember-mapbox-gl",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.0.0",
     "ember-resolver": "^8.0.3",
@@ -87,10 +87,6 @@
     "sass": "^1.58.0",
     "webpack": "^5.74.0"
   },
-  "peerDependencies": {
-    "ember-mapbox-gl": ">=0.12.0",
-    "mapbox-gl": ">=0.47.0"
-  },
   "engines": {
     "node": "14.* || 16.* || >= 18"
   },
@@ -99,9 +95,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "resolutions": {
-    "**/mapbox-gl": ">=0.47.0"
   },
   "homepage": "https://www.npmjs.com/package/@nycplanning/ember"
 }
