--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nycplanning/ember",
-  "version": "2.2.0",
+  "version": "3.0.0-0",
   "description": "A central repository for Ember addons maintained and used by New York City Department of City Planning.",
   "keywords": [
     "ember-addon"
