--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "ember-composable-helpers": "3.2.0",
     "ember-copy": "^2.0.1",
     "ember-fetch": "^8.1.2",
-    "ember-mapbox-gl": "^2.0.0",
     "ember-power-select": "^6.0.2",
     "ember-promise-helpers": "1.0.9",
     "ember-truth-helpers": "^3.1.1",
@@ -64,6 +63,7 @@
     "ember-data": "3.19.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-load-initializers": "^2.1.2",
+    "ember-mapbox-gl": "^1.0.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.0.0",
     "ember-resolver": "^8.0.3",
@@ -86,6 +86,9 @@
     "qunit-dom": "^2.0.0",
     "sass": "^1.58.0",
     "webpack": "^5.74.0"
+  },
+  "peerDependencies": {
+    "ember-mapbox-gl": "^1.0.0"
   },
   "engines": {
     "node": "14.* || 16.* || >= 18"
