--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ember-power-select": "^5.0.2",
     "ember-promise-helpers": "1.0.9",
     "ember-truth-helpers": "^3.1.1",
-    "mapbox-gl": ">=0.47.0",
+    "mapbox-gl": "^1.0.0",
     "nyc-planning-style-guide": "^1.0.7"
   },
   "devDependencies": {
@@ -47,7 +47,6 @@
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.5.3",
     "ember-cli": "~3.28.0",
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "1.0.2",
@@ -64,7 +63,7 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
     "ember-load-initializers": "^2.1.2",
-    "ember-mapbox-gl": "NYCPlanning/ember-mapbox-gl",
+    "ember-mapbox-gl": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.2.2",
     "ember-qunit": "^5.1.4",
@@ -89,8 +88,8 @@
     "sass": "^1.58.0"
   },
   "peerDependencies": {
-    "ember-mapbox-gl": ">=0.12.0",
-    "mapbox-gl": ">=0.47.0"
+    "ember-mapbox-gl": "^1.0.0",
+    "mapbox-gl": "^1.0.0"
   },
   "engines": {
     "node": "12.* || 14.* || 16.* || 18.*"
@@ -100,9 +99,6 @@
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
-  },
-  "resolutions": {
-    "**/mapbox-gl": ">=0.47.0"
   },
   "homepage": "https://www.npmjs.com/package/@nycplanning/ember"
 }
