--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ember-copy": "^2.0.1",
     "ember-fetch": "^8.1.2",
     "ember-power-select": "^6.0.2",
-    "ember-promise-helpers": "1.0.9",
+    "ember-promise-helpers": "^2.0.0",
     "ember-truth-helpers": "^3.1.1",
     "mapbox-gl": "^1.0.0",
     "nyc-planning-style-guide": "^1.0.7"
