--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nyc-planning-style-guide": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "@babel/eslint-parser": "^7.21.3",
     "@babel/plugin-proposal-decorators": "^7.21.0",
     "@ember/optional-features": "^2.0.0",
@@ -45,7 +46,7 @@
     "@ember/string": "^3.0.1",
     "@ember/test-helpers": "^2.9.3",
     "@embroider/test-setup": "^2.1.1",
-    "@fortawesome/ember-fontawesome": "^0.4.1",
+    "@fortawesome/ember-fontawesome": "^1.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
@@ -67,7 +68,7 @@
     "ember-concurrency": "^2.3.7",
     "ember-data": "3.19.0",
     "ember-load-initializers": "^2.1.2",
-    "ember-mapbox-gl": "^1.0.0",
+    "ember-mapbox-gl": "^2.0.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
@@ -82,6 +83,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
     "foundation-sites": "^6.7.5",
+    "jquery": "^3.6.0",
     "loader.js": "^4.7.0",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
@@ -90,7 +92,8 @@
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-prettier": "^3.0.0",
-    "webpack": "^5.78.0"
+    "webpack": "^5.78.0",
+    "what-input": "^5.2.10"
   },
   "peerDependencies": {
     "ember-mapbox-gl": "^2.0.0",
