--- a/package.json
+++ b/package.json
@@ -56,17 +56,13 @@
     "concurrently": "^8.0.1",
     "ember-cli": "~4.12.1",
     "ember-cli-dependency-checker": "^3.3.1",
-    "ember-cli-deploy": "1.0.2",
-    "ember-cli-deploy-build": "1.1.1",
-    "ember-cli-deploy-git": "1.3.3",
-    "ember-cli-deploy-git-ci": "1.0.1",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-sass": "^11.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-update": "^1.0.1",
     "ember-concurrency": "^2.3.7",
-    "ember-data": "3.19.0",
+    "ember-data": "~4.11.3",
     "ember-load-initializers": "^2.1.2",
     "ember-mapbox-gl": "^2.0.0",
     "ember-page-title": "^7.0.0",
