Update template lint rule settings and fix some linting errors

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "lint:css": "stylelint \"**/*.css\"",
     "lint:css:fix": "concurrently \"npm:lint:css -- --fix\"",
     "lint:fix": "concurrently \"npm:lint:*:fix\" --names \"fix:\"",
-    "lint:hbs": "ember-template-lint .",
-    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:hbs": "ember-template-lint . --ignore-pattern tests/** --ignore-pattern tests/index.html",
+    "lint:hbs:fix": "ember-template-lint . --ignore-pattern tests/** --ignore-pattern tests/index.html --fix",
     "lint:js": "eslint . --cache",
     "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
